Improve flash and frontpage

--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -92,3 +92,8 @@ cs:
         portion_count: "počet porcí"
         meal_type: "typ jídla"
         recipe: "recept"
+
+  # flashes
+  notice: "info"
+  # warning: "varování"
+  error: "chyba"
